fixed background colours in dark mode

--- a/src/theme/light/_smui-theme.scss
+++ b/src/theme/light/_smui-theme.scss
@@ -1,4 +1,4 @@
-$background: #fff;
+$background: rgba(255, 255, 255, 0.96);
 
 @use "@material/theme/index" as theme with (
   $primary: #a00,
